# anki_assist_ai

./: .gitignore  README.md  config.yml  pyproject.toml
anki_assist_ai/: app.py  main.py
utils/: anki_utils.py  example_generator.py
